<resources>
    <string name="app_name">Cipher Master</string>
    <string name="title_activity_intermediate">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="MainTitle">Welcome to Cipher Master</string>
    <string name="IntermediateIntro">Below you have a variety of ciphers to learn about and play with</string>
    <string name="CaesarButtonTitle">The Caesar Cipher</string>
    <string name="AboutCaesar">TextView</string>
    <string name="AboutCaesar1">The Caesar Cipher is one of the earliest developed ciphers with a relatively simple principle behind its functioning. This cipher falls under the category of substitution ciphers where a particular character is replaced with another according to the rule discussed below. If you were wondering, the cipher got its name because Julius Caesar, the famous Roman general, used a similar method when communicating with other generals.</string>
    <string name="AboutCaesar2">The Caesar Cipher works by shifting (or translating) the entire alphabet by a specified number of places (an integer) and then using the position of these shifted letters to replace the letters in the corresponding places in the original alphabet.</string>
    <string name="AboutCaesar3">The image below is an example of the method described above, where the entire alphabet has been moved 3 places to the right so that the when the cipher is implemented, all instances of \'A\' will be replaced with \'D\', \'B\' with \'E\' and so on</string>
    <string name="CeasarCipherSubstitution">TODO</string>
    <string name="CaesarBust">TODO</string>
    <string name="VigenereButtonTitle">The Vigenère Cipher</string>
    <string name="ColumnarButtonTitle">The Columnar Transposition Cipher</string>
    <string name="AutokeyButtonTitle">The Autokey Cipher</string>
    <string name="AffineButtonTitle">The Affine Cipher</string>
    <string name="BifidButtonTitle">The Bifid Cipher</string>
    <string name="FourSquareButtonTitle">The Four-Square Cipher</string>
    <string name="HillButtonTitle">The Hill Cipher</string>
    <string name="PlayfairButtonTitle">The Playfair Cipher</string>
    <string name="XORButtonTitle">The XOR Cipher</string>
    <string name="AffineLetterAssignment">The Affine Cipher is a cipher that falls under the category of monoalphabetic substitution ciphers, where each letter in the alphabet is assigned a number, typically starting with A = 0 and ending with Z = 25 as shown below.</string>
    <string name="AffineConditionExplanation">According to the conditions provided above, \'a\' can take the values (1, 3, 5, 7, 9, 11, 15, 17, 19, 21, 23, 25) and \'b\' can take any value between 0 and 25.</string>
    <string name="AffineFormulaIntro">This assignment of numbers to the letters in the alphabet is used alongside a mathematical function which is based on modular arithmetic. The general form of such a function is shown below. The \'mod\' operator simply evaluates the remainder when (ax + b) is divided by m.</string>
    <string name="AffineExample">Consider a message \'HELP\' where, according to the letter assignment given above, H = 7, E = 4, L = 11 and P = 15. If we let \'a\' = 7 and \'b\' = 15, then according to the formula above E(7) = 12, E(4) = 17, E(11) = 14 and E(15) = 16. \n\nUsing the numbers obtained using the function and the letter assignment given above, 12 = M, 17 = R, 14 = O and 16 = Q. Therefore, the encrypted message becomes \'MROQ\'</string>
    <string name="AffineFormulaAbout">In the formula above \'m\' is 26 and chi (the \'greek\' x) represents the number assigned to a letter in your original message that requires encrypting. The letters \'a\' and \'b\' are variables which represent numbers, that are restricted by the following conditions:\n\n\t 1. The highest common factor of \'a\' and 26 must be 1 \n \t 2. \'a\' must be greater than or equal to 1 and less than or equal to 25 \n \t 3. \'b\' must be greater than or equal to 0 and less than or equal to 25</string>
    <string name="AffineAlphabet">alphabet</string>
    <string-array name="a_values">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
        <item>11</item>
        <item>15</item>
        <item>17</item>
        <item>19</item>
        <item>21</item>
        <item>23</item>
        <item>25</item>
    </string-array>
    <string-array name="b_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>
    <string-array name="alphabet">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
</resources>