<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Intermediate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intermediate_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/IntermediateIntro" />

        <Button
            android:id="@+id/affine_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/intermediate_button_affine"
            android:onClick="toAffineAbout"
            android:shadowColor="#4F5254"
            android:text="@string/AffineButtonTitle"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff" />

        <Button
            android:id="@+id/autokey_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/intermediate_button_autokey"
            android:text="@string/AutokeyButtonTitle"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff"
            android:onClick="toAutokeyAbout"/>

        <Button
            android:id="@+id/bifid_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/intermediate_button_bifid"
            android:text="@string/BifidButtonTitle"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff"
            android:onClick="toBifidAbout"/>

        <Button
            android:id="@+id/caesar_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/intermediate_button_caesar"
            android:text="@string/CaesarButtonTitle"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff"
            android:onClick="toCaesarAbout"/>

        <Button
            android:id="@+id/columnar_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/intermediate_button_columnar"
            android:text="@string/ColumnarButtonTitle"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff"
            android:onClick="toColumnarAbout"/>

        <Button
            android:id="@+id/four_square_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/intermediate_button_four_square"
            android:text="@string/FourSquareButtonTitle"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff"
            android:onClick="toFourSquareAbout"/>

        <Button
            android:id="@+id/playfair_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/intermediate_button_playfair"
            android:text="@string/PlayfairButtonTitle"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff"
            android:onClick="toPlayfairAbout"/>

        <Button
            android:id="@+id/vigenere_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/intermediate_button_vigenere"
            android:text="@string/VigenereButtonTitle"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff"
            android:onClick="toVigenereAbout"/>

        <Button
            android:id="@+id/xor_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/intermediate_button_xor"
            android:text="@string/XORButtonTitle"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff"
            android:onClick="toXORAbout" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="35dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4383335608939724/6067426776">
        </com.google.android.gms.ads.AdView>


    </LinearLayout>
</ScrollView>