<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutCaesar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/caesar_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/AboutCaesar1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/CaesarBust"
            app:srcCompat="@drawable/caesar_side" />

        <TextView
            android:id="@+id/caesar_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/AboutCaesar2" />

        <TextView
            android:id="@+id/caesar_method_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/AboutCaesar3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/CeasarCipherSubstitution"
            app:srcCompat="@drawable/caesar_about" />

        <TextView
            android:id="@+id/caesar_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="If we use the particular Caesar shift mentioned above to encrypt the message 'HELP', 'H' will be replaced by 'K', 'E' will be replaced by 'H', 'L' will be replaced by 'O' and 'P' will be replaced by 'S'. Therefore, the final message becomes 'KHOS'. " />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4383335608939724/2505555903">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/toIntermediate"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:onClick="toIntermediate"
                android:text="Back"
                android:textColor="#03A9F4"
                android:textColorHint="#03A9F4"
                android:textSize="10sp" />

            <Button
                android:id="@+id/toCaesarImplementer"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="To The Cipher Implementer"
                android:textColor="#03A9F4"
                android:textColorHint="#03A9F4"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>